--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -24,13 +24,13 @@ body {
   font-weight: normal;
   color: #93a1a1; }
 
-::selection {
+.alert, ::selection {
   color: #fff;
   background: #d33682;
   text-shadow: none; }
 
 .reveal .slides > section, .reveal .slides > section > section {
-  line-height: 1.3;
+  line-height: 1.4;
   font-weight: inherit; }
 
 /*********************************************
@@ -41,9 +41,9 @@ body {
   color: #eee8d5;
   font-family: 'League Gothic', Impact, sans-serif;
   font-weight: normal;
-  line-height: 1.2;
+  line-height: 1.4;
   letter-spacing: normal;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   text-shadow: none;
   word-wrap: break-word; }
 
@@ -67,7 +67,7 @@ body {
  *********************************************/
 .reveal p {
   margin: 20px 0;
-  line-height: 1.3; }
+  line-height: 1.4; }
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img, .reveal video, .reveal iframe {
@@ -75,6 +75,7 @@ body {
   max-height: 95%; }
 
 .reveal strong, .reveal b {
+  color: #eee8d5;
   font-weight: bold; }
 
 .reveal em {
@@ -159,12 +160,20 @@ body {
   font-weight: bold; }
 
 .reveal table th, .reveal table td {
-  text-align: left;
+  font-size: 0.5em;
   padding: 0.2em 0.5em 0.2em 0.5em;
+  text-align: left;
   border-bottom: 1px solid; }
 
 .reveal table tr:last-child td {
   border-bottom: none; }
+
+.reveal table caption {
+  caption-side: bottom;
+  margin-top: 2em;
+  text-align: right;
+  font-size: 0.45em;
+}
 
 .reveal sup {
   vertical-align: super; }
@@ -175,7 +184,7 @@ body {
 .reveal small {
   display: inline-block;
   font-size: 0.6em;
-  line-height: 1.2em;
+  line-height: 1.4em;
   vertical-align: top; }
 
 .reveal small * {
